# langchain-agentic-poc

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
.streamlit/: secrets.toml.example
app_pages/: chat.py
services/: agent_service.py  tools.py
src/: get_started.py  get_started_deepagents.py  get_started_deepagents_websearch.py  main.py
src/model/: llm.py
ui/components/: sidebar.py
