[project]
name = "langchain-agentic-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.7",
    "langchain-core>=1.4.5",
    "langchain-openai>=1.3.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
